Revert "fixing some spacings"
This reverts commit 4cdc79791fc5bb69b55386a547402a384c46e3fc.

--- a/css/main.css
+++ b/css/main.css
@@ -428,9 +428,9 @@ img, video {
 }
 /* footer */
 #footer {
-    min-block-size: var(--screen-without-nav);
+    justify-content: flex-end;
     margin-inline: max(-2vw, -1.5rem);
-    padding-inline: var(--gap);
+    padding: var(--gap-3) var(--gap);
 }
 
 /* entry */
@@ -502,11 +502,10 @@ img, video {
     margin-block-start: 22.5vh;
     --space: calc(var(--gap-4) * var(--ratio));
 }
-#article {
-    margin-block: calc(var(--gap-4) * 2.25);
+#article, #about {
+    margin-block: calc(var(--gap-4) * 3);
 }
 #about {
-    margin-block: calc(var(--gap-4) * 3.375);
     max-width: min(100%, 105ch);
 }
 
